re did scaffold

--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -12,16 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :word %><br />
-    <%= f.text_field :word %>
-  </div>
-  <div class="field">
-    <%= f.label :choices %><br />
-    <%= f.text_area :choices %>
-  </div>
-  <div class="field">
-    <%= f.label :user %><br />
-    <%= f.text_field :user %>
+    <%= f.label :level %><br />
+    <%= f.text_field :level %>
   </div>
   <div class="actions">
     <%= f.submit %>
