--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,18 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Word:</b>
-  <%= @game.word %>
-</p>
-
-<p>
-  <b>Choices:</b>
-  <%= @game.choices %>
-</p>
-
-<p>
-  <b>User:</b>
-  <%= @game.user %>
+  <b>Level:</b>
+  <%= @game.level %>
 </p>
 
 
