--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,27 +1,24 @@
-<h1>Listing games</h1>
 
-<table>
-  <tr>
-    <th>Word</th>
-    <th>Choices</th>
-    <th>User</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+  <ul>
+  <%= content_tag_for(:li, @games) do |game| %>
+      <%= game.level %>
+      <%= link_to 'Show', game, id: dom_id(game,'show') %>
 
-<% @games.each do |game| %>
-  <tr>
-    <td><%= game.word %></td>
-    <td><%= game.choices %></td>
-    <td><%= game.user %></td>
-    <td><%= link_to 'Show', game %></td>
-    <td><%= link_to 'Edit', edit_game_path(game) %></td>
-    <td><%= link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+    <%= link_to edit_game_path(game),
+              id: dom_id(game,'edit') do %>
+    <%= bootstrap_icon('icon-pencil') %>
+    <% end %>
+    <%= link_to game, method: :delete, data: { confirm: 'Are you sure?', ok: "Delete" },
+              id: dom_id(game,'delete') do %>
+    <%= bootstrap_icon('icon-trash') %>
+    <% end %>
+  <% end %>
+  </ul>
 
 <br />
 
 <%= link_to 'New Game', new_game_path %>
+
+
+
+<%= paginate @games %>
