order by completed games

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -11,5 +11,5 @@
 
 <br/>
 
-<%= link_to 'New Practice Game', new_game_path, id: 'new_game' %>
+<%= link_to 'New', new_game_path, id: 'new_game' %> Practice Game
 
