strip spaces in words

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -12,5 +12,5 @@
 
 <br/>
 
-<%= link_to 'New', new_game_path, id: 'new_game' %> Practice Game
+<%= link_to 'New', new_game_path, id: 'new_game' %> Game
 
