--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,7 +1,7 @@
 <ul>
   <%= content_tag_for(:li, @games) do |game| %>
-      <span><%= game.hangman_text %></span>
-      <span><%= game.score %></span>
+      <span><%= game.hangman_text %></span> -
+      <span><%= game.score %></span> -
       <%= link_to(game.done? ? 'show' : 'continue', game, id: dom_id(game, 'show')) %>
   <% end %>
 </ul>
