did hangman using breaks

--- a/app/views/games/_hangman.html.erb
+++ b/app/views/games/_hangman.html.erb
@@ -1,144 +1,143 @@
 <% if @game.attempts_left == 0 -%>
-     ________
-    |        |
-    |        |
-    |        O
-    |       /|\
-    |      / | \
-    |        |
-    |       / \
-    |      /   \
-    |
-    |
-    ------------
+     ________<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;O<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;/|\<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;/ | \<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;/&nbsp;\<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;\<br/>
+    |<br/>
+    |<br/>
+    ------------<br/>
 <% elsif @game.attempts_left == 1 -%>
-     ________
-    |        |
-    |        |
-    |        O
-    |       /|\
-    |      / | \
-    |        |
-    |       /
-    |      /
-    |
-    |
-    ------------
+    ________<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;O<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;/|\<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;/ | \<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;/&nbsp;<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<br/>
+    |<br/>
+    |<br/>
+    ------------<br/>
 <% elsif @game.attempts_left == 2 -%>
-    ________
-    |        |
-    |        |
-    |        O
-    |       /|\
-    |      / | \
-    |        |
-    |
-    |
-    |
-    |
-    ------------
+    ________<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;O<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;/|\<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;/ | \<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    ------------<br/>
 <% elsif @game.attempts_left == 3 -%>
-    ________
-    |        |
-    |        |
-    |        O
-    |       /|
-    |      / |
-    |        |
-    |
-    |
-    |
-    |
-    ------------
+    ________<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;O<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;/|<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;/ |<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    ------------<br/>
 <% elsif @game.attempts_left == 4 -%>
-    ________
-    |        |
-    |        |
-    |        O
-    |        |
-    |        |
-    |        |
-    |
-    |
-    |
-    |
-    ------------
+    ________<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;O<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    ------------<br/>
 <% elsif @game.attempts_left == 5 -%>
-    ________
-    |        |
-    |        |
-    |        O
-    |
-    |
-    |
-    |
-    |
-    |
-    |
-    ------------
+    ________<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;O<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    ------------<br/>
 <% elsif @game.attempts_left == 6 -%>
-    ________
-    |        |
-    |        |
-    |
-    |
-    |
-    |
-    |
-    |
-    |
-    |
-    ------------
+    ________<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br/>
+    |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    ------------<br/>
 <% elsif @game.attempts_left == 7 -%>
-    ________
-    |
-    |
-    |
-    |
-    |
-    |
-    |
-    |
-    |
-    |
-    ------------
+    ________<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    ------------<br/>
 <% elsif @game.attempts_left == 8 -%>
-
-    |
-    |
-    |
-    |
-    |
-    |
-    |
-    |
-    |
-    |
-    ------------
+    <br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    |<br/>
+    ------------<br/>
 <% elsif @game.attempts_left == 9 -%>
-
-
-
-
-
-
-
-
-
-
-
-    ------------
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    ------------<br/>
 <% elsif @game.attempts_left == 10 -%>
-
-
-
-
-
-
-
-
-
-
-
-
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
 <% end -%>
