--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -12,8 +12,7 @@
 
 <br/>
 
-<%= link_to 'new', new_game_path, id: 'new_game' %> Game
-
+<%= link_to 'new', new_game_path, id: 'new_game' %> game
 <br/>
-View <%= link_to 'rank', user_path(current_user), id: 'view_rank' %>
+view <%= link_to 'rank', user_path(current_user), id: 'view_rank' %>
 
