--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -14,7 +14,7 @@ You have <span><%= @game.attempts_left %></span> attempts left
     view <%= link_to 'rank', user_path(current_user), id: 'view_rank' %>
 <% else %>
     <% ("a".."z").each do |letter| -%>
-      <%= link_to(letter, play_letter_game_path(@game,letter), id: letter) %>
+      <%= link_to_unless(@game.choices.to_s.include?(letter),letter, play_letter_game_path(@game,letter), id: letter) %>
     <% end -%>
 <% end %>
 <br/>
