--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -7,7 +7,7 @@ You have <span><%= @game.attempts_left %></span> attempts left
 <% end %>
 <div <% if @game.is_lost? %>style="color:red;"<% end %>><%= render partial: 'hangman' %></div>
 <br/>
-<span style="color:purple;"><%= @game.hangman_text %></span>
+<b style="color:purple;"><%= @game.hangman_text.split("").join(" ") %></b>
 <br/>
 <% if @game.done? %>
     <%= link_to 'new', new_game_path, id: "new_game" %> game |
