add Provider to google tracking

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -12,7 +12,6 @@
 
 <br/>
 
-<%= link_to 'new', new_game_path, id: 'new_game' %> game
-<br/>
+<%= link_to 'new', new_game_path, id: 'new_game' %> game |
 view <%= link_to 'rank', user_path(current_user), id: 'view_rank' %>
 
