--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -11,6 +11,7 @@ You have <span><%= @game.attempts_left %></span> attempts left
 <br/>
 <% if @game.done? %>
     <%= link_to 'new', new_game_path, id: "new_game" %> game |
+    <%= link_to 'define', define_word_path(word: @game.hangman_text), id: "define_word" %> word |
     view <%= link_to 'rank', user_path(current_user), id: 'view_rank' %>
 <% else %>
     <% ("a".."z").each do |letter| -%>
