first attempt at mxit markup

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
   <%= content_tag_for(:li, @users) do |user| %>
-    <%=  CGI::unescape(user.name).html_safe %> - <%= params[:order] == 'top_week' ? user.weekly_rating : user.monthly_rating  %>
+    <%= display_user_name(user.name) %> - <%= params[:order] == 'top_week' ? user.weekly_rating : user.monthly_rating  %>
   <% end %>
 </ul>
 
