--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,3 +1,8 @@
+<b>Welcome to hangman extreme</b>
+<br/>
+Have fun guessing the word
+<br/>
+
 <ul>
   <%= content_tag_for(:li, @games) do |game| %>
       <span><%= game.hangman_text %></span> -
