--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,21 +1,14 @@
-Games Played: <%= @user.game_count %>
+Your rank for the day: <%= @user.weekly_rank.ordinalize %>
 <br/>
-Week Rank: <%= @user.weekly_rank.ordinalize %>
+Your rank for the week: <%= @user.daily_rank.ordinalize %>
+<br/><br/>
+Your score for today: <%= @user.daily_score %>
 <br/>
-Week Rating: <%= @user.weekly_rating %>
-<br/>
-Month Rank: <%= @user.monthly_rank.ordinalize %>
-<br/>
-Month Rating: <%= @user.monthly_rating %>
-<br/>
-Year Rank: <%= @user.yearly_rank.ordinalize %>
-<br/>
-Year Rating: <%= @user.yearly_rating %>
-<br/>
-
+Your score for the week: <%= @user.weekly_score %>
+<br /><br />
 <%= link_to 'home', root_path, id: 'root_page' %> |
-top <%= link_to 'week', users_path(order: 'top_week'), id: 'view_top_week_users' %> players |
-top <%= link_to 'month', users_path(order: 'top_month'), id: 'view_top_month_users' %> players
+Top players for this <%= link_to 'week', users_path(order: 'top_week'), id: 'view_top_week_users' %> |
+Top players for <%= link_to 'today', users_path(order: 'top_day'), id: 'view_top_day_users' %>
 
 
 
