--- a/app/views/battles/fight.html.erb
+++ b/app/views/battles/fight.html.erb
@@ -1,3 +1,6 @@
+<%= @battle.outcome %><br /><br />
+<%= @battle.user.inspect %><br /><br />
+<%= @battle.inspect %><br /><br />
 <%= Battle.description %> The outcome was:
 
 <br /><br />
