right mxit code

--- a/app/views/battles/index.html.erb
+++ b/app/views/battles/index.html.erb
@@ -6,5 +6,5 @@
 2. Read the <%= link_to 'rules', rules_path, id: 'rules' %> <br />
 3. View your <%= link_to 'rank', user_path(current_user), id: 'view_rank' %> <br />
 4. <%= link_to 'Learn', explanation_path, id: 'learn' %> about the battle creatures
-5. Check out <a href="mxit://[communityportal]/RecommendPage?ItemId=7297721" type="mxit/service-navigation"> Hangman extreme</a>
+5. Check out <a href="mxit://[communityportal:Refresh]/ReferralPage?ItemId=7297721" type="mxit/service-navigation"> Hangman extreme</a>
 
