Only saving games up to 3 days old

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <% if params[:order] == "top_week" %>
-	<h1>Top players for the week</h1>
+	<h1>Top players for the last 3 days</h1>
 <% else %>
 	<h1>Top players for today</h1>
 <% end %>
