--- a/app/views/battles/index.html.erb
+++ b/app/views/battles/index.html.erb
@@ -1,6 +1,8 @@
 <p class="welcome_message">
 	<b>Welcome to the world of battle creatures.</b>
 </p>
+<p>Notice: We have reset the scores due to an upgrade. We are improving Battle Creatures!</p>
+<br />
 
 1. <%= link_to 'Battle', new_battle_path, id: 'new_battle' %> <br />
 2. Read the <%= link_to 'rules', rules_path, id: 'rules' %> <br />
